# tennis-elbow-hub

./: .env.example  .env.production  .gitignore  DEPLOYMENT.md  MatchLog - problematic.html  README.md  ads.txt  audit_output.txt  audit_report.txt  debug_elo.py  debug_elo_diff.py  debug_output.txt  render.yaml  reproduction_elo.py  skills-lock.json  start-dev.ps1  stats.db  verify_elo.py
backend/: Dockerfile  check_db.py  check_db2.py  check_env.py  debug_analyzer_import.py  debug_parser.py  init_db_script.py  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  stats.db  test_scrub.py
backend/alembic/: env.py
backend/alembic/versions/: 20260414220907_add_prediction_tables.py  20260417120000_predictions_sets_count_and_qualifier_map.py  20260424180000_add_approved_to_user_profiles.py  5ff7f62c0348_add_user_profiles_table.py  c64faa9b157b_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/core/: __init__.py  config.py  database.py  limiter.py  logging.py  security.py  utils.py
backend/app/models/: __init__.py  daily_stats.py  finished_match.py  game_server.py  guide.py  match_stats.py  outfit.py  player_alias.py  prediction.py  user_profile.py
backend/app/services/: __init__.py  ai_service.py  analyzer.py  parser.py  scoring.py  scraper.py  stats_service.py  tournament_scraper.py
backend/app/utils/: helpers.py
backend/scripts/: seed_guides.py
backend/tests/: __init__.py  conftest.py  test_analyzer.py  test_api.py  test_parser.py  test_profile_api.py  test_scoring.py
(+136 files in other folders)
